[package]
name = "arduino-avr-sys"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
prettify_bindgen = ["clang"]

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
glob = "0.3.1"
bindgen = "0.69.4"
clang = { version = "2.0.0", features = ["runtime"], optional = true  }
cc = "1.0.90"
