[package]
name = "arduino-sdk-sys"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
native_bindgen = ["bindgen","prettify_bindgen"]
prettify_bindgen = ["clang"]

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
glob = "0.3.1"
bindgen = { version = "0.69.4", optional = true  }
clang = { version = "2.0.0", features = ["runtime"], optional = true  }
cc = "1.0.90"
lazy_static = "1.4.0"
tempfile = "3.10.1"